@@ -77,6 +77,13 @@ func (l *CheckDrivesize) setDisks(requiredDisks map[string]map[string]string) (e
 }
 
 func (l *CheckDrivesize) setCustomPath(drive string, requiredDisks map[string]map[string]string) (err error) {
+	// make sure path exists
+	if err := utils.IsFolder(drive); err != nil {
+		log.Debugf("%s: %s", drive, err.Error())
+
+		return fmt.Errorf("path %s does not exist", drive)
+	}
+
 	// try to find closes matching mount
 	availMounts := map[string]map[string]string{}
 	err = l.setDisks(availMounts)
