@@ -7,6 +7,7 @@ next:
          - check_eventlog: fix using event id
          - fix wrapped scripts not found
          - fix check_drivesize using random volume for sub path
+         - fix check_drivesize using root folder when checking non-existing path
 
 0.18     Wed Feb 14 15:36:38 CET 2024
          - fix crash on windows when parsing empty args (#88)
